# imx-gst1.0-plugin

./: .gitignore  Makefile.am  SCR.txt  aclocal.m4  configure.ac  meson.build  meson_options.txt
doc/: MX6_Multimedia_GST1.x_Yocto_Project_Release_Notes.docx  MX6_Yocto_Project_Multimedia_Gstreamer_1.x_User_Guide.docx
doc/design/: IMXPlayer_Design.xlsx
ext-includes/: fsl_media_types.h  fsl_parser.h  fsl_types.h  fsl_unia.h  g2d.h  g2dExt.h  imx_opencl_converter.h  mp3_enc_interface.h  spdifparser.h  spdifparser_types.h  vpu_wrapper.h
libs/: Makefile.am  gstimx.h  gstimxcommon.c  gstimxcommon.h  meson.build
libs/.deps/: libgstfsl1_0_la-gstallocatorphymem.Plo  libgstfsl1_0_la-gstsutils.Plo  libgstfsl1_0_la-mfw_gst_ts.Plo
libs/allocator/: gstallocatorphymem.c  gstallocatorphymem.h  gstphymemmeta.c  gstphymemmeta.h
libs/device-2d/: imx_2d_device.c  imx_2d_device.h  imx_2d_device_allocator.c  imx_2d_device_allocator.h  imx_2d_device_g2d.c  imx_2d_device_ipu.c  imx_2d_device_ocl.c  imx_2d_device_pxp.c
libs/gstsutils/: gstsutils.c  gstsutils.h
libs/overlaycompositionmeta/: imxoverlaycompositionmeta.c  imxoverlaycompositionmeta.h
libs/v4l2_core/: gstimxv4l2.c  gstimxv4l2.h
libs/video-overlay/: gstimxvideooverlay.c  gstimxvideooverlay.h  gstimxxoverlay.c  gstimxxoverlay.h
libs/video-tsm/: mfw_gst_ts.c
plugins/: find_soname.py  meson.build
plugins/aiurdemux/: Makefile.am  aiur.c  aiur_registry.arm11.cf  aiur_registry.arm9.cf  aiur_registry_1.0.arm.cf.in  aiur_registry_1.0.arm11.cf.in  aiurcontent.c  aiurcontent.h  aiurdemux.c  aiurdemux.h  aiuridxtab.c  aiuridxtab.h  aiurregistry.c  aiurregistry.h  aiurstreamcache.c  aiurstreamcache.h  aiurtypefind.c  meson.build
plugins/aiurdemux/.deps/: libaiurdemux_la-aiur.Plo  libaiurdemux_la-aiurdemux.Plo  libaiurdemux_la-aiuridxtab.Plo  libaiurdemux_la-aiurregistry.Plo  libaiurdemux_la-aiurstreamcache.Plo  libaiurdemux_la-aiurtypefind.Plo
plugins/avb/: Makefile.am  avtp.c  avtp.h  cip.c  cip.h  ethernet.c  ethernet.h  gstavbclock.c  gstavbclock.h  gstavbmpegtssink.c  gstavbmpegtssink.h  gstavbmpegtssrc.c  gstavbmpegtssrc.h  gstavbpcmsink.c  gstavbpcmsink.h  gstavbpcmsrc.c  gstavbpcmsrc.h  gstavbplugin.c  gstavbsink.c  gstavbsink.h  gstavbsrc.c  gstavbsrc.h
plugins/beepdec/: Makefile.am  beep.c  beep_registry.arm12.cf  beep_registry.arm12.cf.in  beep_registry_1.0.arm.cf.in  beep_registry_1.0.arm12.cf.in  beepdec.c  beepdec.h  beepregistry.c  beepregistry.h  beeptypefind.c  meson.build
plugins/compositor/: Makefile.am  gstimxcompositor.c  gstimxcompositor.h  gstimxcompositorpad.c  gstimxcompositorpad.h  meson.build
plugins/compositor/base/: gstaggregator.c  gstvideoaggregator.c  gstvideoaggregator.h  gstvideoaggregatorpad.h
plugins/fbdevsink/: Makefile.am  gstimxfbdevsink.c  gstimxfbdevsink.h
plugins/mp3enc/: Makefile.am  gstimxmp3.c  gstimxmp3enc.c  gstimxmp3enc.h  meson.build
plugins/overlay_sink/: Makefile.am  compositor.c  compositor.h  device.c  device.h  displays.h  displaysfb.c  displaysv4l2.c  gstosink.c  gstosink.h  gstosinkallocator.c  gstosinkallocator.h  imx_6q_display_config  imx_6sx_display_config  imx_7ulp_display_config  imx_8dv_display_config  imx_8q_display_config  meson.build  osink_common.h  osink_object.c  osink_object.h
plugins/spdifdemux/: Makefile.am  gstspdifdemux.c  gstspdifdemux.h  meson.build
plugins/v4l2/: Makefile.am  gstimxv4l2.c  gstimxv4l2.h  gstimxv4l2allocator.c  gstimxv4l2allocator.h  gstimxv4l2plugins.c  gstimxv4l2sink.c  gstimxv4l2sink.h  gstimxv4l2src.c  gstimxv4l2src.h  meson.build
plugins/v4l2/.deps/: libgstimxv4l2plugins_la-gstimxv4l2.Plo  libgstimxv4l2plugins_la-gstimxv4l2allocator.Plo  libgstimxv4l2plugins_la-gstimxv4l2plugins.Plo  libgstimxv4l2plugins_la-gstimxv4l2sink.Plo
plugins/videoconvert/: Makefile.am  gstimxvideoconvert.c  gstimxvideoconvert.h  gstimxvideoconvertallocator.c  gstimxvideoconvertallocator.h  meson.build  videoprocessdevice.c  videoprocessdevice.h  videoprocessdevice_g2d.c  videoprocessdevice_ipu.c  videoprocessdevice_pxp.c
plugins/vpu/: Makefile.am  gstvpu.c  gstvpu.h  gstvpuallocator.c  gstvpuallocator.h  gstvpudec.c  gstvpudec.h  gstvpudecobject.c  gstvpudecobject.h  gstvpuenc.c  gstvpuenc.h  gstvpuplugins.c  meson.build
plugins/vpu/.deps/: libgstvpu_la-gstvpu.Plo  libgstvpu_la-gstvpuallocator.Plo  libgstvpu_la-gstvpudec.Plo  libgstvpu_la-gstvpudecobject.Plo
tools/: Makefile.am  meson.build
tools/docs/: GStreamer_Command-line_Player_Application_Specification.doc
tools/gplay/: Makefile.am  gplay.c  gst_snapshot.c  mfw_gplay.c  mfw_gplay_core.c  mfw_gplay_core.h  playengine.c  playengine.h  playlist.c  playlist.h
tools/gplay/.deps/: gplay_1.0-mfw_gplay.Po  gplay_1.0-playlist.Po  libgplaycore_1.0_la-fsl_player_debug.Plo  libgplaycore_1.0_la-fsl_player_osal.Plo  libgplaycore_1.0_la-fsl_player_queue.Plo  libgplaycore_1.0_la-fsl_player_ui_message.Plo  libgplaycore_1.0_la-gst_snapshot.Plo  libgplaycore_1.0_la-mfw_gplay_core.Plo
tools/gplay/.libs/: gplay-1.0  libgplaycore-1.0.la  libgplaycore-1.0.lai
tools/gplay2/: Makefile.am  gplay2.c  meson.build  playlist.c  playlist.h
tools/grecorder/: Makefile.am  fsl_types.h  grecorder.c  meson.build  recorder_engine.c  recorder_engine.h
tools/gst-player/: Makefile  gst-backend.c  gst-backend.h  ui.c
tools/imx-player/: Makefile  controlbar.c  controlbar.h  imxplayer  imxplayer.c  imxplayer.h  infobox.c  infobox.h  menubar.c  menubar.h  playengine.c  playengine.h  playlistbox.c  playlistbox.h  seektodialog.c  seektodialog.h  speedbox.c  speedbox.h  subtitle.c  subtitle.h  volumebar.c  volumebar.h
tools/imx-player/config/: gtkrc
